Fix CSS alignment

--- a/assets/css/admin/view-logs.css
+++ b/assets/css/admin/view-logs.css
@@ -34,7 +34,7 @@
 
 #el-pro-msg {
 	display: inline-block;
-	margin: 5px 0;
+	margin: 7px 0;
 }
 
 .column-result .dashicons {
